Adapt code so that is passes make distcheck

--- a/Makefile.am
+++ b/Makefile.am
@@ -55,6 +55,10 @@ install-data-local: $(DOXYGEN_INSTALL_DATA_TARGETS) sphinx-install
 
 uninstall-local: $(DOXYGEN_UNINSTALL_DATA_TARGETS)
 
+# Files to be removed in build directory
+clean-local:
+	rm -rf $(builddir)/.DS_Store
+
 #
 # Additional rules
 #
