--- a/src/ctools-setup.in
+++ b/src/ctools-setup.in
@@ -26,8 +26,9 @@ fi
 #
 # Set parameters
 # ==============
-prefix="@prefix@"
-exec_prefix="@exec_prefix@"
+#prefix="@prefix@"
+prefix=$CTOOLS
+#exec_prefix="@exec_prefix@"
 ctools_bin="@bindir@"
 ctools_lib="@libdir@"
 uname_system=`uname`
