ctools-setup script now depends on $CTOOLS environment variable (#1929)

--- a/src/ctools-setup.in
+++ b/src/ctools-setup.in
@@ -27,16 +27,23 @@ fi
 # Set parameters
 # ==============
 #prefix="@prefix@"
-prefix=$CTOOLS
 #exec_prefix="@exec_prefix@"
-ctools_bin="@bindir@"
-ctools_lib="@libdir@"
-uname_system=`uname`
+#ctools_bin="@bindir@"
+#ctools_lib="@libdir@"
+#python_dir="@pythondir@"
+#python_exec_dir="@pyexecdir@"
+#pkgconfig_dir="@libdir@/pkgconfig"
+#man_dir="@datadir@/doc/ctools/man"
+#caldb_dir="@datadir@/caldb"
+prefix="$CTOOLS"
+ctools_bin="$CTOOLS/bin"
+ctools_lib="$CTOOLS/lib"
 python_dir="@pythondir@"
 python_exec_dir="@pyexecdir@"
-pkgconfig_dir="@libdir@/pkgconfig"
-man_dir="@datadir@/doc/ctools/man"
-caldb_dir="@datadir@/caldb"
+pkgconfig_dir="$CTOOLS/lib/pkgconfig"
+man_dir="$CTOOLS/share/doc/ctools/man"
+caldb_dir="$CTOOLS/share/caldb"
+uname_system=`uname`
 
 #
 # Make pfiles available (this is needed for an installation where the
