--- a/src/ctools-setup.in
+++ b/src/ctools-setup.in
@@ -26,23 +26,23 @@ fi
 #
 # Set parameters
 # ==============
-prefix="@prefix@"
-exec_prefix="@exec_prefix@"
-ctools_bin="@bindir@"
-ctools_lib="@libdir@"
-python_dir="@pythondir@"
-python_exec_dir="@pyexecdir@"
-pkgconfig_dir="@libdir@/pkgconfig"
-man_dir="@datadir@/doc/ctools/man"
-caldb_dir="@datadir@/caldb"
-#prefix="$CTOOLS"
-#ctools_bin="$CTOOLS/bin"
-#ctools_lib="$CTOOLS/lib"
+#prefix="@prefix@"
+#exec_prefix="@exec_prefix@"
+#ctools_bin="@bindir@"
+#ctools_lib="@libdir@"
 #python_dir="@pythondir@"
 #python_exec_dir="@pyexecdir@"
-#pkgconfig_dir="$CTOOLS/lib/pkgconfig"
-#man_dir="$CTOOLS/share/doc/ctools/man"
-#caldb_dir="$CTOOLS/share/caldb"
+#pkgconfig_dir="@libdir@/pkgconfig"
+#man_dir="@datadir@/doc/ctools/man"
+#caldb_dir="@datadir@/caldb"
+prefix="$CTOOLS"
+ctools_bin="$CTOOLS/bin"
+ctools_lib="$CTOOLS/lib"
+python_dir="@pythondir@"
+python_exec_dir="@pyexecdir@"
+pkgconfig_dir="$CTOOLS/lib/pkgconfig"
+man_dir="$CTOOLS/share/doc/ctools/man"
+caldb_dir="$CTOOLS/share/caldb"
 uname_system=`uname`
 
 #
