--- a/src/ctools-setup.in
+++ b/src/ctools-setup.in
@@ -26,15 +26,16 @@ fi
 #
 # Set parameters
 # ==============
-prefix="$CTOOLS"
-ctools_bin="$CTOOLS/bin"
-ctools_lib="$CTOOLS/lib"
+prefix="@prefix@"
+exec_prefix="@exec_prefix@"
+ctools_bin="@bindir@"
+ctools_lib="@libdir@"
+uname_system=`uname`
 python_dir="@pythondir@"
 python_exec_dir="@pyexecdir@"
-pkgconfig_dir="$CTOOLS/lib/pkgconfig"
-man_dir="$CTOOLS/share/doc/ctools/man"
-caldb_dir="$CTOOLS/share/caldb"
-uname_system=`uname`
+pkgconfig_dir="@libdir@/pkgconfig"
+man_dir="@datadir@/doc/ctools/man"
+caldb_dir="@datadir@/caldb"
 
 #
 # Make pfiles available (this is needed for an installation where the
