Adjuste code so that it compiles on all Python versions

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -49,6 +49,8 @@ all-local:
 
 # Files to be removed in build directory
 clean-local:
+	rm -rf $(top_builddir)/test/*.pyc
+	rm -rf $(top_builddir)/test/__pycache__
 	rm -rf $(top_builddir)/test/*.fits
 	rm -rf $(top_builddir)/test/*.log
 	rm -rf $(top_builddir)/test/*.xml
