--- a/pyext/setup.py.in
+++ b/pyext/setup.py.in
@@ -141,8 +141,8 @@ if is_build:
     if '@BUILD_WRAPPERS_FALSE@' != '#':
         py_file  = pkg_name+'/tools.py'
         cpp_file = pkg_name+'/tools_wrap.cpp'
-        os.system('cp %s %s' % ('@srcdir@/'+cpp_file, '@builddir@/'+cpp_file))
-        os.system('cp %s %s' % ('@srcdir@/'+py_file,  '@builddir@/'+py_file))
+        os.system('cp %s %s' % ('@top_srcdir@/pyext/'+cpp_file, '@top_builddir@/pyext/'+cpp_file))
+        os.system('cp %s %s' % ('@top_srcdir@/pyext/'+py_file,  '@top_builddir@/pyext/'+py_file))
 
     # In case that the build directory is different from the source directory
     # then copy all cscripts and parfiles from the source directory to the
