Updated ctphase tool (#1982)
Updated build capabilities (configure.ac and Makefile.am files).
Updated ctphase to add phase information.
Updated GammaLib class "GCTAEventList" to allow specifying whether phase information and detector coordinates are set.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -40,7 +40,8 @@ SUBDIRS = support \
           cttsmap \
           ctbutterfly \
           ctulimit \
-          cterror
+          cterror \
+          ctphase
 
 # Scripts to be distributed
 scripts = ctools-setup \
@@ -68,7 +69,9 @@ libctools_la_LIBADD = support/libsupport.la \
                       cttsmap/libcttsmap.la \
                       ctbutterfly/libctbutterfly.la \
                       ctulimit/libctulimit.la \
-                      cterror/libcterror.la
+                      cterror/libcterror.la \
+                      ctphase/libctphase.la
+
 libctools_la_LDFLAGS = -version-info $(CTOOLS_LT_VERSION) @OPENMP_LIB_LDFLAGS@
 
 # Distribute scripts
