Update configuration file

--- a/configure.ac
+++ b/configure.ac
@@ -1026,6 +1026,7 @@ AC_CONFIG_FILES([Makefile
                  src/ctskymap/Makefile
                  src/ctselect/Makefile
                  src/ctphase/Makefile
+                 src/ctprob/Makefile
                  src/ctexpcube/Makefile
                  src/ctpsfcube/Makefile
                  src/ctedispcube/Makefile
