Add pulse curve test data

--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -181,7 +181,9 @@ testdata = $(top_srcdir)/test/data/crab.xml \
            $(top_srcdir)/test/data/model_mapcube.fits.gz \
            $(top_srcdir)/test/data/iact_runlist.dat \
            $(top_srcdir)/test/data/iact_runlist_1.dat \
-           $(top_srcdir)/test/data/iact_runlist_2.dat
+           $(top_srcdir)/test/data/iact_runlist_2.dat \
+           $(top_srcdir)/test/data/model_temporal_phasecurve.xml \
+           $(top_srcdir)/test/data/model_temporal_phasecurve.fits
 
 # Test data to be distributed in $(pyexecdir)/cscripts/tests/data/iactdata
 testiactdata = $(top_srcdir)/test/data/iactdata/hdu-index.fits.gz \
