--- a/cscripts/__init__.py.in
+++ b/cscripts/__init__.py.in
@@ -35,6 +35,7 @@ __all__ = [
     "csobsdef",
     "csobsinfo",
     "csobsselect",
+    "csphasecrv",
     "cspull",
     "csresmap",
     "csroot2caldb",
@@ -69,6 +70,7 @@ from cscripts.csobs2caldb   import csobs2caldb
 from cscripts.csobsdef      import csobsdef
 from cscripts.csobsinfo     import csobsinfo
 from cscripts.csobsselect   import csobsselect
+from cscripts.csphasecrv    import csphasecrv
 from cscripts.cspull        import cspull
 from cscripts.csresmap      import csresmap
 from cscripts.csroot2caldb  import csroot2caldb
