Fixed installed unit test

--- a/pyext/Makefile.am
+++ b/pyext/Makefile.am
@@ -69,8 +69,10 @@ testdata = $(top_srcdir)/test/data/crab.xml \
            $(top_srcdir)/test/data/phased_events.fits.gz \
            $(top_srcdir)/test/data/invalid_event_list.fits.gz \
            $(top_srcdir)/test/data/model_temporal_phasecurve.xml \
+           $(top_srcdir)/test/data/model_temporal_phasecurve.fits \
            $(top_srcdir)/test/data/obs_unbinned.xml \
-           $(top_srcdir)/test/data/exclusion.reg
+           $(top_srcdir)/test/data/exclusion.reg \
+           $(top_srcdir)/test/data/irf_file.fits.gz
 
 # Install test scripts and test data. Note that we don't need to prepend
 # $(DESTDIR) here (not fully clear why, but that's the way it is)
