Cherry-pick same changes for release 1.2.1

--- a/pyext/Makefile.am
+++ b/pyext/Makefile.am
@@ -65,7 +65,9 @@ testdata = $(top_srcdir)/test/data/crab.xml \
            $(top_srcdir)/test/data/crab_events.fits.gz \
            $(top_srcdir)/test/data/crab_cntmap.fits.gz \
            $(top_srcdir)/test/data/invalid_event_list.fits.gz \
-           $(top_srcdir)/test/data/exclusion.reg
+           $(top_srcdir)/test/data/obs_unbinned.xml \
+           $(top_srcdir)/test/data/exclusion.reg \
+           $(top_srcdir)/test/data/irf_file.fits.gz
 
 # Install test scripts and test data. Note that we don't need to prepend
 # $(DESTDIR) here (not fully clear why, but that's the way it is)
@@ -119,6 +121,9 @@ EXTRA_DIST = ctools/tests \
              $(testscripts) \
              $(testdata) \
              $(testirf)
+dist-hook:
+	cp -r $(srcdir)/*.i $(distdir)
+	cp -r $(srcdir)/ctools/*.i $(distdir)/ctools
 
 # Dependencies. Obtain the list of dependencies by executing ls.
 DEPFILES = $(shell ls *.Pi 2> /dev/null)
@@ -161,6 +166,7 @@ uninstall-local:
 	rm -rf $(DESTDIR)$(pyexecdir)/ctools/tests/*.pyc
 	rm -rf $(DESTDIR)$(pyexecdir)/ctools/tests/__pycache__
 	rm -rf $(DESTDIR)$(pyexecdir)/ctools-@VERSION@*.egg-info
+	rm -rf $(DESTDIR)$(datarootdir)/ctools
 
 # Set files to be removed in 'make clean'
 CLEANFILES = $(CLEAN_FILES) $(DEPFILES)
